--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,8 +3,6 @@ name: Rust
 on:
   push:
     branches: ["main"]
-    tags:
-      - v*
 
 env:
   CARGO_TERM_COLOR: always
@@ -23,5 +21,6 @@ jobs:
       - run: cargo build --release --target wasm32-unknown-unknown
       - uses: ncipollo/release-action@v1
         with:
+          tag: v1.0.0
           artifacts: "target/wasm32-unknown-unknown/release/*.wasm"
           token: ${{ secrets.GITHUB_TOKEN }}
